--- a/index.html
+++ b/index.html
@@ -654,7 +654,7 @@ font-weight: bolder;
 <header class="header">
 
     <a href="#" class="logo">
-        <img src="images/logo.png" alt="">
+        <img src="logo.png" alt="">
     </a>
 
     <nav class="navbar">
@@ -681,7 +681,7 @@ font-weight: bolder;
     <div class="cart-items-container">
         <div class="cart-item">
             <span class="fas fa-times"></span>
-            <img src="images/cart-item-1.png" alt="">
+            <img src="cart-item-1.png" alt="">
             <div class="content">
                 <h3>cart item 01</h3>
                 <div class="price">$15.99/-</div>
@@ -689,7 +689,7 @@ font-weight: bolder;
         </div>
         <div class="cart-item">
             <span class="fas fa-times"></span>
-            <img src="images/cart-item-2.png" alt="">
+            <img src="cart-item-2.png" alt="">
             <div class="content">
                 <h3>cart item 02</h3>
                 <div class="price">$15.99/-</div>
@@ -697,7 +697,7 @@ font-weight: bolder;
         </div>
         <div class="cart-item">
             <span class="fas fa-times"></span>
-            <img src="images/cart-item-3.png" alt="">
+            <img src="cart-item-3.png" alt="">
             <div class="content">
                 <h3>cart item 03</h3>
                 <div class="price">$15.99/-</div>
@@ -705,7 +705,7 @@ font-weight: bolder;
         </div>
         <div class="cart-item">
             <span class="fas fa-times"></span>
-            <img src="images/cart-item-4.png" alt="">
+            <img src="cart-item-4.png" alt="">
             <div class="content">
                 <h3>cart item 04</h3>
                 <div class="price">$15.99/-</div>
@@ -741,7 +741,7 @@ font-weight: bolder;
     <div class="row">
 
         <div class="image">
-            <img src="images/about-img.jpeg" alt="">
+            <img src="about-img.jpeg" alt="">
         </div>
 
         <div class="content">
@@ -766,14 +766,14 @@ font-weight: bolder;
     <div class="box-container">
 
         <div class="box">
-            <img src="images/menu-1.png" alt="">
+            <img src="menu-1.png" alt="">
             <h3>tasty and healty</h3>
             <div class="price">$15.99 <span>20.99</span></div>
             <a href="#" class="btn">add to cart</a>
         </div>
 
         <div class="box">
-            <img src="images/menu-2.png" alt="">
+            <img src="menu-2.png" alt="">
             <h3>tasty and healty</h3>
             <div class="price">$15.99 <span>20.99</span></div>
             <a href="#" class="btn">add to cart</a>
@@ -826,7 +826,7 @@ font-weight: bolder;
                 <a href="#" class="fas fa-eye"></a>
             </div>
             <div class="image">
-                <img src="images/product-1.png" alt="">
+                <img src="product-1.png" alt="">
             </div>
             <div class="content">
                 <h3>fresh coffee</h3>
@@ -848,7 +848,7 @@ font-weight: bolder;
                 <a href="#" class="fas fa-eye"></a>
             </div>
             <div class="image">
-                <img src="images/product-2.png" alt="">
+                <img src="product-2.png" alt="">
             </div>
             <div class="content">
                 <h3>fresh coffee</h3>
@@ -870,7 +870,7 @@ font-weight: bolder;
                 <a href="#" class="fas fa-eye"></a>
             </div>
             <div class="image">
-                <img src="images/product-3.png" alt="">
+                <img src="product-3.png" alt="">
             </div>
             <div class="content">
                 <h3>fresh coffee</h3>
@@ -898,9 +898,9 @@ font-weight: bolder;
     <div class="box-container">
 
         <div class="box">
-            <img src="images/quote-img.png" alt="" class="quote">
+            <img src="quote-img.png" alt="" class="quote">
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi nulla sit libero nemo fuga sequi nobis? Necessitatibus aut laborum, nisi quas eaque laudantium consequuntur iste ex aliquam minus vel? Nemo.</p>
-            <img src="images/pic-1.png" class="user" alt="">
+            <img src="pic-1.png" class="user" alt="">
             <h3>john deo</h3>
             <div class="stars">
                 <i class="fas fa-star"></i>
@@ -912,9 +912,9 @@ font-weight: bolder;
         </div>
 
         <div class="box">
-            <img src="images/quote-img.png" alt="" class="quote">
+            <img src="quote-img.png" alt="" class="quote">
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi nulla sit libero nemo fuga sequi nobis? Necessitatibus aut laborum, nisi quas eaque laudantium consequuntur iste ex aliquam minus vel? Nemo.</p>
-            <img src="images/pic-2.png" class="user" alt="">
+            <img src="pic-2.png" class="user" alt="">
             <h3>john deo</h3>
             <div class="stars">
                 <i class="fas fa-star"></i>
